dataset1235/2025-2/2947369575/users/3574852503/executions/1003782500_3921830315.log
== SUBMISSION (2025-09-01 21:58:43)
-- CODE: 
n1=float(input())
n2=float(input())
n3=float(input())
n4=float(input())
mp=((n1*1)+(n2*2)+(n3*3)+(n4*4))/10
print(round(mp,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:58:16)
-- CODE: 
n1=float(input())
n2=float(input())
n3=float(input())
n4=float(input())
mp=((n1*1)+(n2*2)+(n3*3)+(n4*4))/10
print(round(mp,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:58:29)
-- CODE: 
total=float(input())
lucro=total*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
3.12
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
44.45
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
15.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
26.22
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
71.47
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
12.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:58:42)
-- CODE: 
n1=float(input())
n2=float(input())
n3=float(input())
n4=float(input())
mp=((n1*1)+(n2*2)+(n3*3)+(n4*4))/10
print(round(mp,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2=float(input())
             ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:27)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total+s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:27)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total+s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:14:55)
-- CODE: 
l = float(input())
s = l * (2.86)+ 50.00
total + s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total + s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:29)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total+s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:15:28)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total+s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:48)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total=s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:25)
-- CODE: 
l=float(input())
s=l*(2.86)+ 50.00
total+s+(s*(34/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total+s+(s*(34/100))
    ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:58:29)
-- CODE: 
total=float(input())
lucro=total*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
3.12
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
44.45
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
15.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
26.22
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
71.47
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
12.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
